OLMIS-1249 FEOLMIS-515 Moved alerts to the new file
Also updated names of alerts to follow SMACSS convention

--- a/src/main/webapp/public/auth/login.scss
+++ b/src/main/webapp/public/auth/login.scss
@@ -38,7 +38,7 @@ body {
     line-height: 1.5em;
     border-color: transparent;
   }
-  .alert-error {
+  .is-error {
     font-size: 0.9em;
     line-height: 1.5em;
     border-color: $red;
