OLMIS-1344: change notification width unit from em to px

--- a/src/main/webapp/public/common/base.scss
+++ b/src/main/webapp/public/common/base.scss
@@ -138,14 +138,20 @@ select {
   text-align: right;
 }
 
-@-moz-keyframes fade-in { @include fade-in; }
+@include keyframes(fade-in) {
+  from {
+    @include transform(scale(0));
+  }
+  to {
+    @include transform(scale(1));
+  }
+}
 
-@-webkit-keyframes fade-in { @include fade-in; }
-
-@keyframes fade-in { @include fade-in; }
-
-@-moz-keyframes fade-out { @include fade-out; }
-
-@-webkit-keyframes fade-out { @include fade-out; }
-
-@keyframes fade-out { @include fade-out; }
+@include keyframes(fade-out) {
+  from {
+    @include transform(scale(1));
+  }
+  to {
+    @include transform(scale(0));
+  }
+}
