OLMIS-1345: changed layout of the alert modal

--- a/src/main/webapp/public/common/variables.scss
+++ b/src/main/webapp/public/common/variables.scss
@@ -3,6 +3,7 @@ $heading-green: #0d8d98;
 $cyan: #45a7ad;
 $green: #356b6f;
 $red: #a94442;
+$orange: #ffa500;
 
 $white: #ffffff;
 $very-light-gray: #f8f8f8;
