OLMIS-1340: disabled display of offline div added by Offline plugin

--- a/src/main/webapp/public/common/base.scss
+++ b/src/main/webapp/public/common/base.scss
@@ -163,3 +163,7 @@ select {
 .fadeOut {
   @include animation(fade-out 500ms);
 }
+
+.offline-ui {  // Offline linrary is adding div element with this class
+  display: none;   // so we don't want to display it
+}
