--- a/src/main/webapp/public/dashboard/navigation.scss
+++ b/src/main/webapp/public/dashboard/navigation.scss
@@ -175,24 +175,29 @@ header > .navbar {
         box-shadow: inset 0.1em 0.1em 0.1em $light-shadow;
         border-radius: 0.3em;
       }
+
+      > ul {
+        /* Arrow up */
+        &::before{
+          content: "";
+          position:absolute;
+          top: -0.4em;
+          left: 2.2em;
+          width: 0em;
+          height: 0em;
+          border-left: 0.4em solid transparent;
+          border-right: 0.4em solid transparent;
+          border-bottom: 0.45em solid $white;
+        }
+      }
     }
+
+
   }
 
   .dropdown-menu {
     top: 90%;
     @include linear-gradient(to bottom, $white 10%, $light-gray 100%);
-    /* Arrow up */
-    &::before{
-      content: "";
-      position:absolute;
-      top: -0.4em;
-      left: 2.2em;
-      width: 0em;
-      height: 0em;
-      border-left: 0.4em solid transparent;
-      border-right: 0.4em solid transparent;
-      border-bottom: 0.45em solid $white;
-    }
 
     a {
       color: $text-color;
@@ -204,5 +209,12 @@ header > .navbar {
     }
   }
   /* SECOND LEVEL DROPDOWN */
+
+  .dropdown-submenu{position:relative;}
+  .dropdown-submenu>.dropdown-menu{top:0;left:100%;margin-top:-6px;margin-left:-1px;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
+  .dropdown-submenu:hover>.dropdown-menu{display:block;}
+  .dropdown-submenu>a:after{display:block;content:" ";float:right;width:0;height:0;border-color:transparent;border-style:solid;border-width:5px 0 5px 5px;border-left-color:#cccccc;margin-top:5px;margin-right:-10px;}
+  .dropdown-submenu:hover>a:after{border-left-color:#ffffff;}
+  .dropdown-submenu.pull-left{float:none;}.dropdown-submenu.pull-left>.dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}
 
 }
