--- a/src/main/webapp/public/administration/template/template-list/template-list.html
+++ b/src/main/webapp/public/administration/template/template-list/template-list.html
@@ -15,7 +15,7 @@
     				<div ng-if="program.template">
                         <i class="fa fa-check"></i>
                         <div openlmis-message="template.configured"></div>
-                        <a openlmis-message="link.edit"></a>
+                        <a ng-click="goToTemplate(program.template.id)" openlmis-message="link.edit"></a>
     				</div>
     			</td>
     		</tr>
