OLMIS-1233: Updated list of options for warehouses
* show all of supplying depots for requisition
* updated documentation
* set supplying facility as default option
* removed unused injections

--- a/src/main/webapp/public/requisitions/requisition/convert-one-rnr-to-order/convert--one-rnr-to-order.scss
+++ b/src/main/webapp/public/requisitions/requisition/convert-one-rnr-to-order/convert--one-rnr-to-order.scss
@@ -9,7 +9,7 @@
 		    }
 		}
 
-		.form-group.facilities {
+		.form-group.depots {
 		    margin-left: 20px;
 		    label {
 		        font-weight: normal;
