OLMIS-1383: fix typo

--- a/src/main/webapp/public/administration/template/template.html
+++ b/src/main/webapp/public/administration/template/template.html
@@ -2,7 +2,7 @@
     <div class="page">
         <h2 openlmis-message="configure.rnr.header"></h2>
         <div class="info-box">
-            <div>{{'program.header' | messsage}}</div>
+            <div>{{'program.header' | message}}</div>
             <div>{{vm.program.name}}</div>
             <a ng-click="goToTemplateList()">{{'template.change' | message}}</a>
         </div>
