--- a/src/main/webapp/public/administration/template/template-toolbar.html
+++ b/src/main/webapp/public/administration/template/template-toolbar.html
@@ -1,10 +1,10 @@
 <div id="action_buttons" class="action-buttons">
     <div class="form-cell button-row">
-        <button id="saveButton" ng-click="saveTemplate()"
-            class="btn btn-primary save-button" ng-disabled="!template.$isValid()">
+        <button id="saveButton" ng-click="vm.saveTemplate()"
+            class="btn btn-primary save-button" ng-disabled="!vm.template.$isValid()">
             {{'button.save' | message}}
         </button>
-        <button id="cancelButton" ng-click="goToTemplateList()"
+        <button id="cancelButton" ng-click="vm.goToTemplateList()"
             class="btn btn-default save-button"
             openlmis-message="button.cancel" type="button">
             {{'button.cancel' | message}}
