--- a/src/main/webapp/public/administration/template/template.html
+++ b/src/main/webapp/public/administration/template/template.html
@@ -1,4 +1,4 @@
-<div class="template">
+<div class="requisition-template-admin">
     <div class="page">
         <h2 openlmis-message="configure.rnr.header"></h2>
         <div class="info-box">
@@ -19,11 +19,12 @@
             </thead>
             <tbody dnd-list="vm.template.columnsMap"
                 dnd-drop="vm.dropCallback(event, index, item)">
-                <tr ng-repeat="column in vm.template.columnsMap | orderObjectsBy:'displayOrder'"
+                <tr ng-repeat="column in vm.template.columnsMap | orderObjectBy:'displayOrder'"
                     dnd-draggable="column"
                     dnd-disable-if="!column.columnDefinition.canChangeOrder"
                     dnd-effect-allowed="move"
-                    ng-class="{pinned: !column.columnDefinition.canChangeOrder}">
+                    ng-class="{pinned: !column.columnDefinition.canChangeOrder, moveable: column.columnDefinition.canChangeOrder}">
+                    <dnd-nodrag>
                         <td>
                             <input type="checkbox" ng-model="column.isDisplayed" ng-disabled="column.columnDefinition.isDisplayedRequired">
                         </td>
@@ -44,6 +45,7 @@
                         <td>
                             <div ng-if="!column.$isValid(vm.template.columnsMap)" class="error">{{vm.errorMessage(column)}}</div>
                         </td>
+                    <dnd-nodrag>
                 </tr>
                 <tr class="dndPlaceholder">
                     <td></td><td></td><td></td><td></td><td></td>
@@ -53,4 +55,16 @@
 
     </div>
 </div>
-<ng-include src="'administration/template/template-toolbar.html'"></ng-include>
+<div id="action_buttons" class="action-buttons">
+    <div class="form-cell button-row">
+        <button id="saveButton" ng-click="vm.saveTemplate()"
+            class="btn btn-primary save-button pull-rigth" ng-disabled="!vm.template.$isValid()">
+            {{'button.save' | message}}
+        </button>
+        <button id="cancelButton" ng-click="vm.goToTemplateList()"
+            class="btn btn-default save-button"
+            openlmis-message="button.cancel" type="button">
+            {{'button.cancel' | message}}
+        </button>
+    </div>
+</div>
