OLMIS-1299: Apply styling and code fixes to the adjustment
Fix bug: when we click on small arrow in boxes there is no reaction.
Changed theme about select to select2.

--- a/src/main/webapp/public/common/select.scss
+++ b/src/main/webapp/public/common/select.scss
@@ -1,3 +1,17 @@
-.ui-select-match{
+.ui-select-match {
   width: 250px;
+
+}
+
+.select2-container .select2-choice, .select2-result-label {
+  height: 34px;
+  overflow: auto;
+}
+
+.select2-arrow, .select2-chosen {
+  padding-top: 4px;
+}
+
+.select2-result-label {
+    padding: 8px 7px 4px !important;
 }
