--- a/src/main/webapp/public/common/select.scss
+++ b/src/main/webapp/public/common/select.scss
@@ -15,3 +15,7 @@
 .select2-result-label {
     padding: 8px 7px 4px !important;
 }
+
+.select2-results .select2-highlighted {
+    background: $blue !important;
+}
