--- a/src/main/webapp/public/common/variables.scss
+++ b/src/main/webapp/public/common/variables.scss
@@ -4,6 +4,7 @@ $cyan: #45a7ad;
 $green: #356b6f;
 $red: #a94442;
 $orange: #ffa500;
+$blue: #3875d7;
 
 $white: #ffffff;
 $very-light-gray: #f8f8f8;
