--- a/src/main/webapp/public/common/form.scss
+++ b/src/main/webapp/public/common/form.scss
@@ -40,7 +40,7 @@ markup:
 	<h3>Example form elements</h3>
 	<div class="form-group">
 		<label for="exampleTextInput" >Example text input</label>
-		<input id="exampleTextInput" type="text" ng-model="exampleText" />
+		<input id="exampleTextInput" type="text" ng-model="exampleText" required />
 	</div>
 	<div class="form-group">
 		<label for="exampleSelect">Example combo box element</label>
