--- a/styleguide/index.hbs
+++ b/styleguide/index.hbs
@@ -14,8 +14,8 @@
 </head>
 <body ng-app="openlmis">
   <header class="kss-header">
-    <div>
-      <img class="logo" src="images/logo.png" />
+    <div class="logo">
+      <img src="images/logo.png" />
       <h1>{{options.title}}</h1>
     </div>
     <nav class="navbar">
