--- a/styleguide/index.hbs
+++ b/styleguide/index.hbs
@@ -8,6 +8,8 @@
   <meta name="generator" content="kss-node">
   <meta name="viewport" content="width=device-width">
 
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
   <link rel="stylesheet" href="kss-assets/kss.css">
   <link rel="stylesheet" href="openlmis.css">
   {{{styles}}}
