OLMIS-1383: changes after review
- changed some css classes
- changed some file name

--- a/src/main/webapp/public/requisitions/template/program-administration-list/program-administration-list.html
+++ b/src/main/webapp/public/requisitions/template/program-administration-list/program-administration-list.html
@@ -1,4 +1,4 @@
-<div class="template-list">
+<div class="program-template-list">
     <div class="page">
         <h2>{{'configure.rnr.header' | message}}</h2>
         <table ng-if="vm.programs.length">
