--- a/src/main/webapp/public/requisitions/template/template.html
+++ b/src/main/webapp/public/requisitions/template/template.html
@@ -58,7 +58,7 @@
 <div id="action_buttons" class="action-buttons">
     <div class="form-cell button-row">
         <button id="saveButton" ng-click="vm.saveTemplate()"
-            class="btn btn-primary save-button pull-rigth" ng-disabled="!vm.template.$isValid()">
+            class="btn btn-primary save-button" ng-disabled="!vm.template.$isValid()">
             {{'button.save' | message}}
         </button>
         <button id="cancelButton" ng-click="vm.goToTemplateList()"
