OLMIS-1383: changed cursor to pointer on every link and fixed missing vm reference in template configure page

--- a/src/main/webapp/public/common/base.scss
+++ b/src/main/webapp/public/common/base.scss
@@ -41,6 +41,7 @@ a {
   &:hover {
     color: darken($cyan, 25%);
   }
+  cursor: pointer;
 }
 
 textarea {
@@ -163,4 +164,3 @@ select {
 .fadeOut {
   @include animation(fade-out 500ms);
 }
-
