--- a/src/main/webapp/public/requisitions/template/template.html
+++ b/src/main/webapp/public/requisitions/template/template.html
@@ -4,7 +4,7 @@
         <div class="info-box">
             <div>{{'program.header' | message}}</div>
             <div>{{vm.program.name}}</div>
-            <a ng-click="goToTemplateList()">{{'template.change' | message}}</a>
+            <a ng-click="vm.goToTemplateList()">{{'template.change' | message}}</a>
         </div>
 
         <table>
