OLMIS-1383: fix typo

--- a/src/main/webapp/public/requisitions/template/template.html
+++ b/src/main/webapp/public/requisitions/template/template.html
@@ -26,7 +26,7 @@
                     ng-class="{pinned: !column.columnDefinition.canChangeOrder, moveable: column.columnDefinition.canChangeOrder}">
                     <dnd-nodrag>
                         <td>
-                            <input type="checkbox" ng-model="column.isDisplayed" ng-disabled="column.columnDefinition.isDisplayedRequired">
+                            <input type="checkbox" ng-model="column.isDisplayed" ng-disabled="column.columnDefinition.isDisplayRequired">
                         </td>
                         <td>
                             <div class="circle">
