--- a/src/main/webapp/public/requisitions/template/program-administration-list/program-administration-list.html
+++ b/src/main/webapp/public/requisitions/template/program-administration-list/program-administration-list.html
@@ -15,7 +15,7 @@
     				<div ng-if="program.template">
                         <i class="fa fa-check"></i>
                         <div>{{'template.configured' | message}}</div>
-                        <div ng-if="vm.hasPermissionToConfigureTempaltes()">
+                        <div ng-if="vm.canConfigureTemplates()">
                             <span>(</span>
                                 <a ng-click="vm.goToTemplate(program.template.id)">{{'link.edit' | message}}</a>
                             <span>)</span>
