OLMIS-1122: add login modal styles, add unit tests
unit tests for:
- emit proper event after login
- appropriate behavior on events: event:auth-loggedIn, auth.login, auth.login-modal

--- a/src/main/webapp/public/auth/login.scss
+++ b/src/main/webapp/public/auth/login.scss
@@ -139,6 +139,19 @@ input[placeholder].placeholder {
   }
 }
 
+.login-modal .modal-dialog {
+    width: 50em;
+}
+
+.login-modal .modal-content {
+    margin-top: 15em;
+}
+
 .login-modal .modal-body {
     padding: 0em !important;
+}
+
+.login-modal .login-container {
+    border-radius: 0.5em;
+    border: 0.1em solid white;
 }
