--- a/styleguide/index.hbs
+++ b/styleguide/index.hbs
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="openlmis.css">
   {{{styles}}}
 </head>
-<body ng-app="openlmis">
+<body ng-app="openlmis-core">
   <header class="kss-header">
     <div class="logo">
       <img src="images/logo.png" />
