OLMIS-1122: fix log in through modal from auth page and position modal on center

--- a/src/main/webapp/public/auth/login.scss
+++ b/src/main/webapp/public/auth/login.scss
@@ -144,7 +144,10 @@ input[placeholder].placeholder {
 }
 
 .login-modal .modal-content {
-    margin-top: 15em;
+    position: absolute;
+    width: 50em;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .login-modal .modal-body {
