--- a/src/main/webapp/public/common/variables.scss
+++ b/src/main/webapp/public/common/variables.scss
@@ -18,6 +18,9 @@ $light-shadow: rgba($black, 0.075);
 
 $brand-primary: $heading-green;
 
+
+$table-border-color: $gray;
+
 // Spacing
 $padding2px:2px;
 $space-size: 20px;
