--- a/src/main/webapp/public/tables/tables.scss
+++ b/src/main/webapp/public/tables/tables.scss
@@ -1,11 +1,29 @@
 /*
 Tables
 
-Tables in the OpenLMIS-UI should be used to represent data that needs to be read or edited across multiple attributes in a single list.
+Tables in the OpenLMIS-UI should be used to represent data that needs to be
+read or edited across multiple attributes per item. If there isn't a need to
+look or interact with specific attributes of an item in the list, please use a
+list rather than a table. *Don't use tables for styling purposes.* 
 
-Centeral elements of a table must include:
-* `thead` with named headings for each column
-* `tbody` with optional title element which will create a sub-heading
+*Tables must include:*
+* `thead` that defines the column titles
+* `tbody` which will hold groups of items
+* Have an equal number of cells in each row
+
+*Tables do not:*
+* Include a title for the table, this should be styles as a page heading or
+sub-heading
+* Have an 'on click' action for the entire row, links or buttons may be placed
+in specifc cells
+
+### Groups of Table Rows
+If there are clear categories or sets of rows that should be displayed as a
+group, use a `<tbody>` element to group the items together.
+
+`<tbody>` elements will have their title properties transformed into the first
+row of the table, which will be treated as a title element. See the [tbody-title
+directive for more details.](../../docs/#/api/openlmis.table.tbodyTitle)
 
 markup:
 <table >
@@ -90,6 +108,15 @@ table{
   
   > tbody + tbody{
     border-top-width: 1px;
+  }
+}
+
+tbody tr.title:first-child{
+  background-color: $brand-primary;
+  color: $white;
+  font-weight: bold;
+  td {
+    padding: 1em 2em;
   }
 }
 
