--- a/src/main/webapp/form/select.scss
+++ b/src/main/webapp/form/select.scss
@@ -2,7 +2,16 @@
 /*
 Selects
 
-Stubby bubbly hubbly
+Select boxes should be used only when a list of radio buttons or checkboxes
+would take up too much space. The reason for this is that select boxes hide
+options, which adds a cognative step for a user.
+
+Every select box will show a "clear selection" button after a selection has
+been made.
+
+All select boxes should implement a placeholder message, and start with their
+value unset. Implementers should use specific and tailored language as their 
+select element placeholder. 
 
 markup:
 <form>
@@ -65,7 +74,48 @@ Styleguide 3.1
 
 select{
 	@extend .form-control;
+
+	& + a.clear{
+		display: block;
+	}
+
+	&[disabled] + a.clear{
+		display: none;
+	}
 }
+
+// form > select{
+// 	width: auto;
+// 	border: $gray-light 1px solid;
+// 	& + a.clear{
+// 		@include button-color($gray-light);
+// 		flex: 0 0 auto;
+// 		position:relative;
+// 		width: 2em;
+// 		overflow: hidden;
+// 		text-indent: -300em;
+// 		text-decoration: none;
+// 		&:before{
+// 			content: "\f00d";
+// 			position: absolute;
+// 			top: 0px;
+// 			left: 0px;
+// 			font-family: FontAwesome;
+// 			font-weight: normal;
+// 			font-style: normal;
+// 			display: inline-block;
+// 			text-decoration: inherit;
+// 			line-height: 1em;
+// 			text-indent: 0em;
+// 			width: 100%;
+// 			text-align: center;
+// 			@include transform(translateY(50%));
+// 		}
+// 		&:hover{
+// 			text-decoration: none;
+// 		}
+// 	}
+// }
 
 
 
